@@ -1,8 +1,14 @@
+2011-10-28  Sebastien Binet  <sebastien.binet@cern.ch>
+
+	* tagging PyUtils-00-11-05
+	* support new GRL schema
+	* M bin/filter-and-merge-d3pd.py
+
 2011-10-20  Frank Winklmeier  <fwinkl@cern>
 
 	* tagging PyUtils-00-11-04
 	* bin/tcSubmitTag.py: Remove deprecation warning
-	
+
 	* tagging PyUtils-00-11-03
 	* bin/tcSubmitTag.py: Make it an alias for acmd.py tc submit-tag
 
